--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"bits-ui": "^0.18.0",
 		"clsx": "^2.1.0",
+		"mode-watcher": "^0.2.0",
 		"radix-icons-svelte": "^1.2.1",
 		"tailwind-merge": "^2.2.1",
 		"tailwind-variants": "^0.2.0"
