--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@notionhq/client": "^2.2.14",
 		"bits-ui": "^0.18.0",
 		"clsx": "^2.1.0",
 		"mode-watcher": "^0.2.0",
