--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@notionhq/client": "^2.2.14",
 		"bits-ui": "^0.18.0",
 		"clsx": "^2.1.0",
+		"gsap": "^3.12.5",
 		"mode-watcher": "^0.2.0",
 		"radix-icons-svelte": "^1.2.1",
 		"tailwind-merge": "^2.2.1",
