--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "8.56.0",
+		"@types/gsap": "^3.0.0",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.16",
@@ -40,6 +41,7 @@
 		"@notionhq/client": "^2.2.14",
 		"bits-ui": "^0.18.0",
 		"clsx": "^2.1.0",
+		"gsap": "^3.12.5",
 		"mode-watcher": "^0.2.0",
 		"radix-icons-svelte": "^1.2.1",
 		"tailwind-merge": "^2.2.1",
