--- a/static/manifest.json
+++ b/static/manifest.json
@@ -3,12 +3,21 @@
 	"short_name": "Wishlist",
 	"display": "standalone",
 	"start_url": "/",
-  "background_color": "#000000",
-  "theme_color": "#000000",
+	"background_color": "#000000",
+	"theme_color": "#000000",
 	"icons": [
 		{
+			"src": "/favicon-dark-512.png",
+			"type": "image/png",
+			"sizes": "512x512"
+		},
+    {
+			"src": "/favicon-dark-192.png",
+			"type": "image/png",
+			"sizes": "192x192"
+		},
+    {
 			"src": "/favicon.svg",
-			"type": "image/svg+xml",
 			"sizes": "any"
 		}
 	]
