--- a/static/manifest.json
+++ b/static/manifest.json
@@ -7,18 +7,16 @@
 	"theme_color": "#000000",
 	"icons": [
 		{
-			"src": "/favicon-dark-512.png",
+			"src": "/pwa-dark-512.png",
 			"type": "image/png",
-			"sizes": "512x512"
+			"sizes": "512x512",
+      "purpose": "maskable"
 		},
     {
-			"src": "/favicon-dark-192.png",
+			"src": "/pwa-dark-192.png",
 			"type": "image/png",
-			"sizes": "192x192"
-		},
-    {
-			"src": "/favicon.svg",
-			"sizes": "any"
+			"sizes": "192x192",
+      "purpose": "maskable"
 		}
 	]
 }
