style: change background color to white in manifest.json.

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -3,7 +3,7 @@
 	"short_name": "Wishlist",
 	"display": "standalone",
 	"start_url": "/",
-	"background_color": "#000000",
+	"background_color": "#ffffff",
 	"theme_color": "#000000",
 	"icons": [
 		{
