--- a/static/manifest.json
+++ b/static/manifest.json
@@ -17,6 +17,11 @@
 			"type": "image/png",
 			"sizes": "192x192",
       "purpose": "maskable"
+		},
+    {
+			"src": "/favicon.svg",
+			"type": "image/svg+xml",
+			"sizes": "any"
 		}
 	]
 }
